# EtherRecorderSuite

./: .gitignore  CMakeLists.txt  CMakePresets.json  EtherRecorder.code-workspace  EtherRecorderSuite.sln  claude_ether.code-workspace  config.ini  launch.json
EtherRecorder/: CMakeLists.txt  CMakePresets.json  EtherRecorder.vcxproj
EtherRecorder/inc/: app_config.h  app_error.h  app_thread.h  client_manager.h  command_interface.h  demo_heartbeat_thread.h  error_types.h  file_reader.h  log_queue.h  logger.h  logger_macros.h  message_queue_types.h  message_types.h  thread_registry.h  thread_result_errors.h  thread_status_errors.h  utils.h
EtherRecorder/src/: app_config.c  app_thread.c  client_manager.c  comm_context.c  command_processor.c  demo_heartbeat_thread.c  file_reader.c  log_queue.c  logger.c  main.c  server_manager.c  shutdown_handler.c  version_info.c
PlatformLayer/: CMakeLists.txt  PlatformLayer.vcxproj  PlatformLayer.vcxproj.filters
PlatformLayer/inc/: platform_atomic.h  platform_console.h  platform_error.h  platform_file.h  platform_path.h  platform_sockets.h  platform_threads.h
PlatformLayer/posix/src/: posix_atomic.c  posix_console.c  posix_file.c  posix_mutex.c  posix_random.c  posix_time.c
PlatformLayer/src/: platform_error.c
PlatformLayer/windows/src/: win_atomic.c  win_error.c  win_file.c  win_random.c  win_sockets.c
claude_ether_new/: CMakeLists.txt  CMakePresets.json  LOG_FORMAT_SPEC.md  RELAY_SYSTEM.md  THREAD_COORDINATION.md  config.ini
claude_ether_new/docs/: ERROR_DOMAIN_REORGANIZATION.md  PLATFORM_CONFIG_CHECKLIST.md  PLATFORM_ERROR_INTEGRATION.md  SEND_THREAD_DESIGN.md  TODO.md  thread_registry_design.md
claude_ether_new/inc/: app_config.h  app_error.h  app_thread.h  comm_context.h  command_processor.h  error_types.h  log_queue.h  logger.h  message_queue_types.h  message_types.h  server_manager.h  shutdown_handler.h  thread_registry.h  thread_registry_errors.h  thread_result_errors.h  utils.h  version_info.h
claude_ether_new/src/: app_config.c  app_error.c  app_thread.c  client_manager.c  comm_context.c  command_interface.c  demo_heartbeat_thread.c  file_reader.c  file_reader.h  log_queue.c  logger.c  main.c  message_queue.c  message_types.h  server_manager.c  thread_registry.c  utils.c
claude_ether_original/: CMakeLists.txt  CMakePresets.json  UPDATES.md
claude_ether_original/docs/: API.md  COMM_REFACTOR.md  CONFIG_SYSTEM.md  PLATFORM_ABSTRACTION.md  PROJECT_OVERVIEW.md  RELAY_DISASTER_RECOVERY.md  RELAY_SYSTEM.md  THREAD_COORDINATION.md  THREAD_GROUP_PROPOSAL.md  TODO_THREAD_TESTS.md  thread_structure.md
claude_ether_original/inc/: app_config.h  app_thread.h  client_manager.h  comm_threads.h  command_processor.h  message_queue.h  message_types.h  platform_defs.h  platform_error.h  platform_mutex.h  platform_sockets.h  platform_threads.h  platform_time.h  platform_utils.h  platform_wait.h  server_manager.h  shutdown_handler.h  thread_registry.h
claude_ether_original/old_code/: old_command_interface.c  old_comms_thread.c
claude_ether_original/src/: app_config.c  app_thread.c  client_manager.c  comm_threads.c  command_interface.c  command_processor.c  log_queue.c  logger.c  main.c  message_queue.c  platform_atomic.c  platform_error.c  platform_mutex.c  platform_sockets.c  platform_time.c  platform_utils.c  server_manager.c  thread_group.c  thread_registry.c
docs/: CONFIG_SYSTEM_PROPOSAL.md  PLATFORM_CONFIG_CHECKLIST.md  RELAY_INTEGRATION.md  THREAD_REGISTRY.md  command_interface.html  notes.md
inc/: app_config.h  app_error.h  app_thread.h  client_manager.h  comm_threads.h  command_interface.h  command_processor.h  common_socket.h  common_winsock.h  log_queue.h  logger.h  message_queue.h  old_com_threads.h  old_server_manager.h  platform_atomic.h  platform_defs.h  platform_error.h  platform_mutex.h  platform_sockets.h  platform_threads.h  platform_time.h  platform_utils.h  platform_wait.h  server_manager.h  shutdown_handler.h  thread_group.h  thread_registry.h
platform_layer/: CMakeLists.txt  CMakePresets.json  MIGRATION.md  README.md
platform_layer/inc/: platform_atomic.h  platform_error.h  platform_mutex.h  platform_path.h  platform_random.h  platform_sockets.h  platform_string.h  platform_sync.h  platform_threads.h  platform_time.h
platform_layer/posix/src/: posix_atomic.c  posix_error.c  posix_mutex.c  posix_path.c  posix_sockets.c  posix_string.c  posix_sync.c  posix_threads.c  posix_time.c
platform_layer/src/: platform_error.c
platform_layer/windows/src/: win_atomic.c  win_console.c  win_error.c  win_mutex.c  win_path.c  win_random.c  win_signal.c  win_sockets.c  win_string.c  win_sync.c  win_threads.c  win_time.c  windows_atomic.c  windows_event.c
scripts/: switch_platform.py
src/: app_config.c  app_thread.c  client_manager.c  comm_threads.c  command_interface - Copy.c  command_interface.c  command_processor.c  common_socket.c  log_queue.c  logger.c  main.c  message_queue.c  old_com_threads.c  old_server_manager.c  platform_atomic.c  platform_error.c  platform_mutex.c  platform_sockets.c  platform_threads.c  platform_time.c  platform_utils.c  platform_wait.c  server_manager.c  shutdown_handler.c  thread_group.c  thread_registry.c
